--- a/_config.yml
+++ b/_config.yml
@@ -10,8 +10,9 @@ title: "Web Accessibility Initiative (WAI)"
 email: your-email@domain.com
 description: > # this means to ignore newlines until "baseurl:"
   The Website of the World Wide Web Consortium’s Web Accessibility Initiative.
-baseurl: "/wai-resource-template" # the subpath of your site, e.g. /blog
-url: "https://w3c.github.io" # the base hostname & protocol for your site
+baseurl: "/wai-list-of-courses" # the subpath of your site, e.g. /blog
+url: "https://leticiaseixas.github.io/wai-list-of-courses" # the base hostname & protocol for your site
+
 twitter:
   username: w3c_wai
 author: w3c_wai
@@ -29,8 +30,7 @@ kramwdown:
   input: GFM
   syntax_highlighter: rouge
 highlighter: rouge
-repository: w3c/wai-resource-template
-
+repository: leticiaseixas/wai-list-of-courses
 ytkey: AIzaSyCiZ9uToWu9jb7BTx47NtzCvmGGXKXp8nI
 
 remote_theme: w3c/wai-website-theme
