--- a/netlify.toml
+++ b/netlify.toml
@@ -7,7 +7,7 @@ RUBY_VERSION = "2.6.2"
 
 [[redirects]]
   from = "/"
-  to = "/link/to/page/"
+  to = "/list-of-courses/"
 
 [dev]
 publish = "_site"
