--- a/netlify.toml
+++ b/netlify.toml
@@ -1,14 +1,8 @@
 [build]
-command = "git submodule update --init --remote && bundle exec jekyll build --config '_config.yml,_config_staging.yml'"
-publish = "_site"
 
-[build.environment]
-RUBY_VERSION = "2.6.2" 
+command = "bundle exec jekyll build --config '_config.yml,_config_staging.yml'"
+publish = "_site"
 
 [[redirects]]
   from = "/"
   to = "/list-of-courses/"
-
-[dev]
-publish = "_site"
-framework = "#static"
