--- a/_config.yml
+++ b/_config.yml
@@ -35,7 +35,12 @@ ytkey: AIzaSyCiZ9uToWu9jb7BTx47NtzCvmGGXKXp8nI
 
 remote_theme: w3c/wai-website-theme
 
-
+defaults:
+  -
+    scope:
+      path: ""
+    values:
+      layout: "minimal"
 #  -
 #    scope:
 #      path: "_business-case"
