--- a/_config.yml
+++ b/_config.yml
@@ -40,7 +40,8 @@ defaults:
     scope:
       path: ""
     values:
-      layout: "minimal"
+      layout: standalone_resource
+      standalone_resource_doc_name: Course List
 #  -
 #    scope:
 #      path: "_business-case"
