--- a/_data/strings.yml
+++ b/_data/strings.yml
@@ -1,7 +1,7 @@
 show_all_info: Show all additional information
 hide_all_info: Hide all additional information
-show_info: Show information
-hide_info: Hide information
+show_info: Show info
+hide_info: Hide info
 other: Other
 
 courses: courses
