--- a/_data/strings.yml
+++ b/_data/strings.yml
@@ -167,3 +167,4 @@ back_to_form: Go back to the form
 
 # Results message
 success_message: Your information has been submitted, and you should receive a reply within a month.
+failure_message: An error has occurred. Please try again and if the error continues please contact us.
