--- a/_config.yml
+++ b/_config.yml
@@ -35,13 +35,23 @@ ytkey: AIzaSyCiZ9uToWu9jb7BTx47NtzCvmGGXKXp8nI
 
 remote_theme: w3c/wai-website-theme
 
+collections:
+#  business-case:
+#    area: "Plan & Manage"
+#    name: "Business Case"
+#    shortname: "Business Case"
+#    icon: "book" # TODO
+#    repostitory: w3c/wai-bcase
+#    output: true
+#    acknowledgements: false
+#    permalink: /:collection/:path/
+
 defaults:
   -
     scope:
       path: ""
     values:
-      layout: standalone_resource
-      standalone_resource_doc_name: List of Accessibility Courses
+      layout: "default"
 #  -
 #    scope:
 #      path: "_business-case"
